# logos

./: .gitignore  README.md  checkpoint_dump_stable_prism-media_2025-10-25.txt  compliance_rules.json  pyproject.toml  requirements.in  requirements.inpipbash  requirements.txt  run_test.py
examples/: run_langchain_agent.py  run_llamaindex_agent.py
logos/: client.py  delegator.py
logos/integrations/: langchain.py  llamaindex.py
logos_api/: main.py
logos_api/static/: app.js  index.html
logos_solver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
rulesets/: compliance.json  timing.json
tests/: test_integrations.py  test_logos_core.py
