[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logos-solver"
version = "0.1.0"
authors = [
  { name="apollokz", email="author@example.com" },
]
description = "A symbolic coprocessor for LLMs that replaces probabilistic reasoning with verifiable, mathematical guarantees."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "z3-solver",
    "langchain>=0.1.0,<0.2.0",
    "langchain-core>=0.1.52,<0.2.0",
    "langchain-openai>=0.1.0,<0.2.0",
    # ИСПРАВЛЕНИЕ: Убираем неверное ограничение.
    # Оставляем только 'langchain-google-genai', pip сам найдет совместимую версию.
    "langchain-google-genai",
    "langsmith<0.2.0"
]
